fixed links of wrapped-around navigation bar being a layer above any opened dropdown menus

--- a/css/src/generic.scss
+++ b/css/src/generic.scss
@@ -236,7 +236,7 @@ body {
             display: inline-block;
 
             > a {
-                display: inline-block; position: relative; z-index: 3; vertical-align: bottom;
+                display: inline-block; position: relative; z-index: 1; vertical-align: bottom;
                 padding: 2rem 1.8rem;
                 font-size: 2.4rem; line-height: 1em; color: $color-aspect; text-decoration: none;
 
@@ -272,15 +272,15 @@ body {
         max-width: 30rem; min-width: 25rem; width: 0; max-height: 80rem; height: 0; padding: 0;
         background-color: $color-aspect; visibility: hidden; opacity: 0;
         overflow: hidden;
-        @include box-shadow(0 0 .6rem rgba(0,0,0,.2));
+        @include box-shadow(0 .2rem .4rem rgba(0,0,0,.2));
         @include transition(0s .2s, opacity 0s);
         
         &.depth-1 {
-            top: 100%; left: 0; z-index: 1;
+            top: 100%; left: 0; z-index: 2;
         }
         
         &.depth-2 {
-            top: 0; left: 100%; z-index: 2;
+            top: 0; left: 100%; z-index: 3;
         }
         
         li {
